bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `DeliveryModeSpecifierVariantExternal: EnumDiscriminantInRange<true>` is not satisfied
  --> tests/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `EnumDiscriminantInRange<true>` is not implemented for `DeliveryModeSpecifierVariantExternal`
   |
   = help: the trait `EnumDiscriminantInRange<false>` is implemented for `DeliveryModeSpecifierVariantExternal`
note: required by a bound in `DiscriminantInRange`
  --> src/lib.rs
   |
   | bitfield_types!();
   | ^^^^^^^^^^^^^^^^^ required by this bound in `DiscriminantInRange`
   = note: this error originates in the macro `bitfield_types` (in Nightly builds, run with -Z macro-backtrace for more info)
